[package]
name = "molehill"
version = "0.2.0"
authors = ["Akito Kasai <kasai@akito19.com>"]
edition = "2018"
license = "Apache-2.0"
description = "This tools allows you to generate Digdag workflow templates."
repository = "https://github.com/akito19/molehill"
categories = ["command-line-interface"]
keywords = ["Digdag", "template"]

[dependencies]
exitcode = "1.1.2"
clap = "3.0.0-beta.2"

[dev-dependencies]
assert_cmd = "1.0.5"
predicates = "1.0.8"
